# last-ditch-osg

./: .clang_complete  .dir-locals.el  .gitignore  .projectile  CMakeLists.txt  LastDitch.cc  LastDitch.h  collision.org  design_doc.org
src/: Constants.cc  Constants.h  Debug.h  DebugOut.h  InputAdapter.cc  InputAdapter.h  ThirdPersonManipulator.cc  ThirdPersonManipulator.h
src/callbacks/: DebugTextCallback.h  TestCallback.h
src/components/: Door.h  DynamicEntity.h  Entity.h  Input.h  Rect.h  Region.h  Room.h  StaticEntity.h  Tile.h  UsableObject.h
src/systems/: '  CameraSystem.cc  CameraSystem.h  EntitySystem.cc  EntitySystem.h  MapSystem.cc  MapSystem.h  PhysicsSystem.cc  PhysicsSystem.h  RenderSystem.cc  RenderSystem.h  TimeSystem.cc  TimeSystem.h
